--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run build:mac",
+    "build:mac": "ng build --deploy-url /tddev/TDNext/Scripts/Agile/ --outputHashing=none",
+    "postbuild:mac": "cpx \"dist/*.{js,js.map,css}\" /Volumes/trunkFromVM/TDNext/Scripts/Agile/",
     "test": "jest --watch",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -33,6 +35,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "cpx": "^1.5.0",
     "jest": "^24.9.0",
     "jest-preset-angular": "^7.1.1",
     "ts-node": "~7.0.0",
