--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -33,6 +34,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "^3.4.0",
     "@types/jest": "^24.0.18",
+    "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "cpx": "^1.5.0",
