--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/effects": "^7.1.0",
+    "@ngrx/router-store": "^7.1.0",
+    "@ngrx/store": "^7.1.0",
+    "@ngrx/store-devtools": "^7.1.0",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
