--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --sourceMap=false",
     "build": "npm run build:mac",
-    "build:mac": "ng build --deploy-url --outputHashing=none",
+    "build:mac": "ng build --sourceMap=false --outputHashing=none",
     "postbuild:mac": "cpx \"dist/*.{js,js.map,css}\" /Volumes/trunkFromVM/TDNext/Scripts/Agile/",
     "test": "jest --watch",
     "lint": "ng lint",
@@ -28,6 +28,7 @@
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
     "rxjs": "~6.5.2",
+    "signalr": "^2.4.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -40,6 +41,7 @@
     "@types/jest": "^24.0.18",
     "@types/jquery": "^3.3.31",
     "@types/node": "~8.9.4",
+    "@types/signalr": "^2.2.35",
     "codelyzer": "^5.0.1",
     "cpx": "^1.5.0",
     "jest": "^24.9.0",
